style: apply OpenRewrite